--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "mitt": "^3.0.1",
     "pinia": "^2.1.6",
