--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "pinia": "^2.1.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.3.10",
-    "vuex": "^4.0.0"
+    "vuetify": "^3.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
